<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Glia SDK Widget Example App</string>

    <string name="settings_value_default">Default</string>
    <string name="settings_value_default_company_name"></string>
    <string name="settings_value_default_restart">Default (needs restart)</string>
    <string name="settings_color_blue">Blue</string>
    <string name="settings_color_grey">Grey</string>
    <string name="settings_color_red">Red</string>
    <string name="settings_color_black">Black</string>
    <string name="settings_color_white">White</string>
    <string name="settings_color_dark_grayish_blue">Dark grayish blue</string>
    <string name="settings_color_pure_yellow">Pure Yellow</string>
    <string name="settings_color_dark_cyan">Dark Cyan</string>
    <string name="settings_color_very_dark_blue">Very Dark Blue</string>
    <string name="settings_color_very_dark_grayish_blue">Very Dark Grayish Blue</string>
    <string name="settings_color_very_light_gray">Very Light Gray</string>
    <string name="settings_delius">Delius</string>
    <string name="settings_expletus">Expletus Sans</string>
    <string name="settings_tangerine">Tangerine</string>
    <string name="settings_chat_base_light_color">Base light color</string>
    <string name="settings_chat_base_dark_color">Base dark color</string>
    <string name="settings_chat_base_normal_color">Base normal color</string>
    <string name="settings_chat_base_shade_color">Base shade color</string>
    <string name="settings_chat_brand_primary_color">Brand primary color</string>
    <string name="settings_chat_brand_secondary_color">Brand secondary color</string>
    <string name="settings_chat_system_agent_bubble_color">System agent bubble color</string>
    <string name="settings_chat_font_family">Chat message font family</string>
    <string name="settings_header_title">Title</string>
    <string name="settings_site_api_key_id">Site Api Key id</string>
    <string name="settings_site_api_key_secret">Site Api Key Secret</string>
    <string name="settings_site_id">Site id (needs restart)</string>
    <string name="settings_environment">Region (needs restart)</string>
    <string name="settings_chat_background_color">Background color</string>
    <string name="settings_chat_negative_color">Negative color</string>
    <string name="settings_chat_visitor_message_bg_color">Visitor message bg color</string>
    <string name="settings_chat_visitor_message_txt_color">Visitor message txt color</string>
    <string name="settings_chat_operator_message_bg_color">Operator message bg color</string>
    <string name="settings_chat_operator_message_txt_color">Operator message txt color</string>
    <string name="settings_chat_bot_action_button_bg_color">Bot action button bg color</string>
    <string name="settings_chat_bot_action_button_txt_color">Bot action button txt color</string>
    <string name="settings_chat_bot_action_button_selected_bg_color">Bot selected action button bg color</string>
    <string name="settings_chat_bot_action_button_selected_txt_color">Bot selected action button txt color</string>
    <string name="settings_chat_header_title_tint_color">Header Title Tint color</string>
    <string name="settings_chat_header_home_button_tint_color">Header Home Button Tint color</string>
    <string name="settings_chat_header_exit_queue_button_tint_color">Header Exit Queue Button Tint color</string>
    <string name="settings_chat_starting_heading_text_color">Operator Layout Connecting Heading Color</string>
    <string name="settings_chat_starting_caption_text_color">Operator Layout Connecting Caption Color</string>
    <string name="settings_chat_started_heading_text_color">Operator Layout Connected Heading Color</string>
    <string name="settings_chat_started_caption_text_color">Operator Layout Connected Caption Color</string>
    <string name="settings_send_message_button_tint_color">Send message button tint color</string>
    <string name="settings_colors_title">Colors</string>
    <string name="settings_sdk_title">Sdk settings</string>
    <string name="settings_typography">Typography</string>
    <string name="settings_header_styling">Header Styling</string>
    <string name="settings_operator_layout_styling">Operator Layout Styling</string>
    <string name="settings_other">Other</string>
    <string name="settings_company_name">Company name</string>
    <string name="settings_manual_locale_override">Manual locale override</string>
    <string name="settings_authorization">Authorization type (needs restart)</string>
    <string name="settings_authorization_summary">Authorization type</string>
    <string name="settings_default_queues">Default Queues</string>
    <string name="settings_queue_id">Queue id</string>
    <string name="settings_white_label">White label</string>
    <string name="settings_enable_bubble_outside_app">Enable bubble outside app \n (needs restart)</string>
    <string name="settings_enable_bubble_inside_app">Enable bubble inside app \n (needs restart)</string>
    <string name="settings_remote_theme">Enable Remote Theme</string>
    <string name="settings_runtime_theme">Enable Runtime Theme</string>
    <string name="settings_visitor_context_asset_id">Visitor context asset id</string>
    <string name="settings_use_alert_dialog_button_vertical_alignment">Align AlertDialog Buttons Vertically</string>
    <string name="settings_screen_sharing_mode_title">Screen sharing mode</string>
    <string name="settings_screen_sharing_mode_unbounded">Unbounded</string>
    <string name="settings_screen_sharing_mode_app_bounded">App bounded</string>
    <string name="settings_authentication_behavior_title">Authentication behavior</string>
    <string name="settings_authentication_behavior_forbidden_during_engagement">Forbidden during engagement</string>
    <string name="settings_authentication_behavior_allowed_during_engagement">Allowed during engagement</string>
    <string name="settings_suppress_p_n_permission_dialog_during_auth">Suppress push notifications dialog during authentication \n (needs restart)</string>

    <string name="main_open_settings">Open Settings</string>
    <string name="main_launch_activity">Launch Chat in Activity</string>
    <string name="main_launch_fragment">Launch Chat in Fragment</string>
    <string name="main_start_in_integrator_app">Start Chat in integrator app</string>
    <string name="main_start_entry_widget">Show Entry Widget</string>
    <string name="main_start_entry_widget_bottom_sheet">Bottom Sheet</string>
    <string name="main_start_entry_widget_embedded_view">Embedded View</string>
    <string name="main_start_chat_flow">Start new chat flow</string>
    <string name="main_start_message_center_flow">Start new messaging flow</string>
    <string name="main_start_audio_call">Start new audio call</string>
    <string name="main_start_video_call">Start new video call</string>
    <string name="main_end_engagement">End engagement</string>
    <string name="visitor_info">Visitor info</string>
    <string name="main_init_glia">Init Glia Widgets SDK</string>
    <string name="main_authenticate">Authenticate</string>
    <string name="main_deauthenticate">De-authenticate</string>
    <string name="main_refresh_auth">Refresh authentication</string>
    <string name="main_clear_visitor_session">Clear Session</string>
    <string name="main_show_visitor_code">Show Visitor Code</string>

    <string name="authentication_dialog_title">Authentication</string>
    <string name="authentication_dialog_jwt_input_hint">JSON Web Token</string>
    <string name="authentication_dialog_external_token_input_hint">External access token (optional)</string>
    <string name="authentication_dialog_authenticate_button">Authenticate</string>
    <string name="authentication_dialog_clear_button">Clear</string>
    <string name="authentication_dialog_cancel_button">Cancel</string>
    <string name="refresh_auth_dialog_title">Refresh authentication</string>
    <string name="refresh_dialog_refresh_button">Refresh</string>

    <string name="visitor_info_name">Name</string>
    <string name="visitor_info_email">Email</string>
    <string name="visitor_info_phone">Phone</string>
    <string name="visitor_info_external_id">External ID</string>
    <string name="visitor_info_note">Note</string>
    <string name="visitor_info_save">Save</string>
    <string name="visitor_info_note_save_mode">Note save mode:</string>
    <string name="visitor_info_custom_attributes">Custom attributes:</string>
    <string name="visitor_info_key">Key</string>
    <string name="visitor_info_value">Value</string>
    <string name="visitor_info_delete">Delete</string>
    <string name="visitor_info_replace">Replace</string>
    <string name="visitor_info_merge">Merge</string>
    <string name="visitor_info_append">Append</string>
    <string name="visitor_info_saving">Saving…</string>
    <string name="visitor_info_loading">Loading…</string>

   <string name="push_notification_permission_granted">PN permission: Granted</string>
   <string name="push_notification_permission_not_granted">PN permission: Not Granted</string>
   <string name="push_notification_permission_not_required">PN permission: Not Required</string>

</resources>
