<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clipToPadding="false"
    android:clipChildren="false"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/tool_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_m"
        android:text="@string/main_open_settings"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/tool_bar_layout" />

    <!-- https://salemove.atlassian.net/browse/MUIC-362
    Button
        android:id="@+id/integrator_chat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_m"
        android:text="@string/main_start_in_integrator_app"
        app:icon="@drawable/ic_baseline_chat_bubble"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/settings_button" /-->

    <Button
        android:id="@+id/chat_activity_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_m"
        android:paddingEnd="36dp"
        android:text="@string/main_start_chat_flow"
        app:icon="@drawable/ic_baseline_chat_bubble"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/settings_button" />

    <Button
        android:id="@+id/audio_call_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_m"
        android:paddingEnd="36dp"
        android:text="@string/main_start_audio_call"
        app:icon="@drawable/ic_baseline_call"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/chat_activity_button" />

    <Button
        android:id="@+id/video_call_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_m"
        android:paddingEnd="36dp"
        android:text="@string/main_start_video_call"
        app:icon="@drawable/ic_baseline_videocam"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/audio_call_button" />

    <Button
        android:id="@+id/message_center_activity_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_m"
        android:paddingEnd="36dp"
        android:text="@string/main_start_message_center_flow"
        app:icon="@drawable/ic_secure_message"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/video_call_button" />

    <Button
        android:id="@+id/end_engagement_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_m"
        android:text="@string/main_end_engagement"
        app:layout_constraintEnd_toStartOf="@+id/end_guideline"
        app:layout_constraintStart_toStartOf="@+id/start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/message_center_activity_button" />

    <Button
        android:id="@+id/initGliaWidgetsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_m"
        android:text="@string/main_init_glia"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/end_guideline"
        app:layout_constraintStart_toStartOf="@+id/start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/end_engagement_button" />

    <Button
        android:id="@+id/authenticationButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_m"
        android:text="@string/main_authenticate"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/end_guideline"
        app:layout_constraintStart_toStartOf="@+id/start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/initGliaWidgetsButton" />

    <Button
        android:id="@+id/deauthenticationButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_m"
        android:text="@string/main_deauthenticate"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/end_guideline"
        app:layout_constraintStart_toStartOf="@+id/start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/authenticationButton" />

    <Button
        android:id="@+id/clear_session_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_m"
        android:text="@string/main_clear_visitor_session"
        app:layout_constraintEnd_toStartOf="@+id/end_guideline"
        app:layout_constraintStart_toStartOf="@+id/start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/deauthenticationButton" />

    <Button
        android:id="@+id/visitor_code_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_m"
        android:text="@string/main_show_visitor_code"
        app:layout_constraintEnd_toStartOf="@+id/end_guideline"
        app:layout_constraintStart_toStartOf="@+id/start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/clear_session_button" />

    <androidx.cardview.widget.CardView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/glia_medium"
        android:visibility="gone"
        tools:visibility="visible"
        app:cardElevation="@dimen/glia_large"
        app:cardCornerRadius="@dimen/glia_large"
        app:layout_constraintTop_toBottomOf="@+id/visitor_code_button"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
